--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "formik": "^2.4.3",
+    "framer-motion": "^10.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
