--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.4.3",
     "framer-motion": "^10.16.3",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
