[S09P22B305-154] feat : 이메일 인증

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -49,6 +49,9 @@ dependencies {
 
 	// dto validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// spring mail
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
