--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
