--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,26 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "^7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.17",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
-    "react": "^18.2.0",
+    "formik": "^2.4.5",
+    "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.72.4",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.25.0",
+    "react-native": "0.72.4",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-shared-element": "^0.8.8",
     "react-native-web": "~0.19.6",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.1.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
