--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,10 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.17",
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
+    "expo-random": "~13.2.0",
     "expo-router": "^2.0.7",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
@@ -33,6 +32,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-shared-element": "^0.8.8",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "13.2.2",
     "react-navigation": "^4.4.4",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.1.2",
