--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.11",
     "expo-auth-session": "^5.2.0",
+    "expo-linear-gradient": "^12.5.0",
     "expo-screen-orientation": "~6.0.5",
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "^12.5.0",
