--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 
 	// s3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// Apache Commons Exec
+	implementation 'org.apache.commons:commons-exec:1.3'
 }
 
 tasks.named('test') {
