--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/cookies": "^5.0.1",
     "@react-native-community/datetimepicker": "^7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-cookies/cookies": "^6.2.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@types/react-native-dotenv": "^0.2.0",
@@ -21,12 +23,14 @@
     "expo": "~49.0.11",
     "expo-linear-gradient": "^12.3.0",
     "expo-screen-orientation": "~6.0.5",
+    "expo-secure-store": "^12.5.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
     "react-native-browser": "^0.6.2",
+    "react-native-cookies": "^3.3.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-modal-datetime-picker": "^17.1.0",
