--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/react-native-dotenv": "^0.2.0",
     "axios": "^1.5.0",
     "expo": "~49.0.11",
+    "expo-av": "^13.6.0",
     "expo-linear-gradient": "^12.3.0",
     "expo-screen-orientation": "~6.0.5",
     "expo-secure-store": "^12.5.0",
@@ -38,6 +39,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-shared-element": "^0.8.8",
+    "react-native-track-player": "^3.2.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "^13.2.2",
     "react-navigation": "^4.4.4",
