--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.6",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.10.1",
     "react-mobile-datepicker": "^4.0.2",
     "react-mobile-picker": "^1.0.0",
@@ -60,6 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.15.0"
+    "@types/react-datepicker": "^4.15.0",
+    "@types/react-helmet": "^6.1.7"
   }
 }
