--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-mobile-datepicker": "^4.0.2",
     "react-mobile-picker": "^1.0.0",
+    "react-player": "^2.13.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
