--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-webview": "^0.1.0",
     "react-youtube": "^10.1.0",
     "redux": "^4.2.1",
     "styled-component": "^2.8.0",
