--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 	implementation 'org.apache.commons:commons-exec:1.3'
 
 	// mongoDB
-	implementation ('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+	implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
 
 	//querydsl 추가
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
