--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.3",
     "framer-motion": "^10.16.3",
     "ios-style-picker": "^0.0.6",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.1.2",
     "react-datepicker": "^4.18.0",
