--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -44,8 +44,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 
-	// p6spy
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+//	// p6spy
+//	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
 	// Swagger
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
